# kikuai-bot

./: .env.example  README.md  pyproject.toml  requirements.txt
api/: dependencies.py  main.py
api/db/: base.py
api/db/migrations/: 002_add_email_verification.sql
api/routes/: auth.py  balance.py  balance_v2.py  chart2csv.py  masker.py  patas.py  pricing.py  proxy.py  webhooks.py
api/services/: auth_service.py  credits_service.py  creem_provider.py  email_service.py  free_tier_service.py  ledger_balance.py  payment_engine.py
config/: settings.py
tests/: test_credits_service.py  test_free_tier_service.py
